[package]
name = "peakbagge-rs"
version = "0.1.0"
authors = ["Nathan Howell <nathan.d.howell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmio = "0.2.1"
utm = "0.1.4"
kdtree = "0.6.0"
serde = { version = "1.0.116", features = ["derive"] }
csv = "1.1.3"
num = "0.3.0"
xml-rs = "0.8.3"
